# Multi-cloud-DR-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
app/: Dockerfile  pyproject.toml  requirements.txt
app/src/: config.py  db.py  health.py  main.py
app/src/routes/: admin.py  courses.py
app/src/utils/: logging.py
app/tests/: test_health.py
docs/: architecture.md  design-decisions.md  failover-runbook.md  health-checks.md  rto-rpo.md  tradeoffs.md
infra/terraform/aws-primary/: alb.tf  ecs.tf  main.tf  outputs.tf  security.tf  variables.tf  versions.tf
infra/terraform/aws-standby/: main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/azure-secondary/: main.tf  variables.tf
infra/terraform/cloudflare/: README.md  main.tf  variables.tf
jenkins/: Jenkinsfile
jenkins/shared-library/vars/: deployContainerApp.groovy  deployEcs.groovy  drDrill.groovy  verifyHealthy.groovy
router/: Dockerfile  requirements.txt
router/src/: canary.py  config.py  health_poller.py  main.py  pool.py
router/tests/: test_canary.py
scripts/: bootstrap.sh  canary-failback.sh  health-check.sh  simulate-failure.sh
